<resources>
    <string name="app_name">FinalProject</string>
    <string name="searching">You are searching: </string>
    <string name="MakeName">Make Name</string>
    <string name="CarData">Car Instructions</string>
    <string name="undo">undo</string>
    <string name="MakeID">Make ID</string>
    <string name="ModelName">Model Name</string>
    <string name="ModelID">Model ID</string>
    <string name="success">success</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    abdul_car

    <string name="car">Search For A Car</string>
    <string name="soccer">Search for Soccer Items</string>
    <string name="Songster">Search For Songster</string>
    <string name="Trivia">Search For Trivia</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="review">Review</string>
    <string name="save">Save</string>
    <string name="shopping">Shopping</string>
    <string name="goTB">Go To ToolBar</string>
    <string name="CCarInstructions">Instruction</string>
    <string name="Ok">OK</string>
    <string name="Soccerinstruction">Click on the Soccer new to see full new, image and date,
                                 you can add any new in favourites and delete it from favourite list </string>

    <string name="AddV">Add to Favorites</string>
    <string name="carview">Go To View Cars</string>
    <string name="savedCar">the cars saved Details</string>
    <string name="carshopping">You Are Going to Shop a Cars</string>
    <string name="carsaved">Saved</string>
    <string name="carsearching">Searching</string>
    <string name="cardelete">Delete</string>
    <string name="deletemessage">Do you want to delete this? The selected row is :  </string>
    <string name="Cyes">Yes</string>
    <string name="Cno">No</string>
    <string name="carFinish">Finish</string>
    <string name="homePage">Go To Search Page</string>
    <string name="selection">Select Your App</string>
    <string name="CInstructions">Instructions</string>
    <string name="GoHome">Go Home Page</string>
    =======
    <!-- TODO: Remove or change this placeholder text -->
    <string name="instruction">  First, writes the name of the car brand that you are looking for.
        Second, click on the search button to load the information about the car brand.
        Note: You can cancel downloading the information by clicking on Unload in the taskbar
    " You will have a list of the car make that belongs to the car brand that you decided. Third, lookup for the car that you are inserted in and then click and hold.
     Fourth, you will get and dialogue box, which contains the information about the car.</string>
    <string name="sFavo">Go to Favourites</string>
    <string name="soccerDelete">Do you want to delete this? The selected row is:</string>
    <string name="no">No</string>
    <string name="deletNews">Deleted</string>
    <string name="yes">Yes</string>
    <string name="ratting">Rating</string>
    <string name="sccoerhome">Go To home</string>
    <string name="SocerInstructions">you should use the search bar to search for a soccer news and click on the news that you like to laod the details of the news.:
      </string>
    <string name="shelp">You Clicked on Instructions</string>
    <string name="dataSave">Saved</string>
    <string name="Rating">Rating</string>
    <string name="Instr">Instructions</string>
    <string name="sDelete">Delete</string>
    <string name="OK">Ok</string>
    <string name="scSearch">Search for Cars</string>
    <string name="sfinsish">Finish</string>
    <string name="Ssoccer">Search for Soccer News</string>
    <string name="sSong">Search for Songster</string>
    <string name="sTrivia">Search Trivia</string>

    <string name="title_activity_soccer__favorites_">""</string>
<!--    <string name="title_activity_details_fragment_trivia">DetailsFragmentTrivia</string>-->
<!--    &lt;!&ndash;-->
<!--    This string is used for square devices and overridden by hello_world in-->
<!--    values-round/strings.xml for round devices.-->
<!--    &ndash;&gt;-->
<!--    <string name="hello_world">Hello Square World!</string>-->
<!--    <string name="title_activity_empty_trivia">EmptyActivityTrivia</string>-->
<!--    <string name="title_activity_index">IndexActivity</string>-->
<!--    <string name="title_activity_quiz_frame">Quiz_frame</string>-->
<!--    <string name="title_activity_car__favorites_">Car_Favorites_Activity</string>-->
<!--    <string name="title_activity_car">CarActivity</string>-->
<!--    <string name="title_activity_car_detailed_fragement">CarDetailedFragement</string>-->
<!--    <string name="title_activity_car_result">CarResultActivity</string>-->
<!--    <string name="title_activity_soccer__empty">Soccer_Empty</string>-->
<!--    <string name="title_activity_soccer">SoccerActivity</string>-->
<!--    <string name="title_activity_soccer_detailed_fragment">SoccerDetailedFragment</string>-->
<!--    <string name="title_activity_main">MainActivity</string>-->
<!--    master-->


    new
    <string name="welcome">Welcome to Songster, it lets you search your favourite artist or bands</string>
    <string name="email">Enter you email to get latest updates</string>
    <string name="emailhint">E-mail Address</string>
    <!-- fragment-->

    <string name="favbtn">Add To Favourite</string>
    <string name="play">Play Song</string>
    <string name="back">Back</string>
    <string name="calender">Calender</string>
    <string name="delete">Do you want to delete this?</string>
    <string name="row">The selected row is:</string>
    <string name="data">The database id:</string>

    <!--search page-->
    <string name="searchpage"></string>
    <string name="hint">Search your favourite album</string>
    <string name="songs_earch">Search</string>
    <string name="songsearch">Search</string>
    <string name="header">Songster-API</string>
    <string name="loginbtn">Click here</string>

    <string name="title_activity_songster_a_p_i__view">SongsterAPI_View</string>
    <string name="songhelp">To search for your favourite artist or band songs type the name in the search bar and it will load the songs related
        to band or artist.You can also see the information by clicking on the and also add them to favourite list by pressing favourite button.
        By hitting the star next to search button it will load all your favourite songs.You can also remove the songs from your favourite list by long clicking them.</string>
    <string name="help5">Dismiss</string>
    <string name="project">Songster</string>
    <string name="project_name">Project:Songster</string>
    <string name="help6">Welcome To Songster</string>
    <string name="tool_menu">Help Menu is opened</string>
    <string name="tool_menu2">Songster App is opened</string>
    <string name="toast_favlist_song_add">Favourite List is Empty</string>
    <string name="main_page_toast">You are taken to search page on Click</string>
    <string name="toast_favlist_song_remove">removed from Favourite List</string>
    <string name="toast_simple_remove"> removed from List</string>
    <string name="delete_song">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="addtofav">Add To Favourite</string>
    amal

    <string name="triviasubmit">SUBMIT</string>
    <string name="TriviaEnter">Enter the Number of Question :</string>

    <string name="triviauser">Enter the Name of user :</string>
    <string name="triviaquestion">Choose the Type of Question :</string>
    <string name="indextext1">Welcom To Trivia</string>
    <string name="triviaTrueFalse">True or False</string>
    <string name="triviaMultiple">Multiple Choice</string>
    <string name="triviaBoth">Both</string>
    <string name="triviaDifficulty">Choose Difficulty :</string>
    <string name="Hard">Hard</string>
    <string name="Medium">Medium</string>
    <string name="Easy">Easy</string>
    <string name="tSUBMIT">SUBMIT</string>
    <string name="UnAnswered">Not Answered : </string>
    <string name="ttSUBMIT">SUBMIT</string>


</resources>